# bioimage-classification

./: LICENSE  README.md  pyproject.toml
code/: 10fold_classifier.ipynb  exercise.ipynb  mnist.ipynb
data/: dataset.xlsx
